--- a/semana-6/introdução-java/java-1.html
+++ b/semana-6/introdução-java/java-1.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Média ponderada</title>
-    <script src="./java-1.js"></script>
+    <script src="./media-1.js"></script>
 </head>
 
 <body>
