--- a/semana-6/introdução-java/java-1.html
+++ b/semana-6/introdução-java/java-1.html
@@ -7,6 +7,7 @@
     <title>Média ponderada</title>
     <script src="./idade-1.js"></script>
     <script src="./media-1.js"></script>
+    <script src="./calc-1.js"></script>
 </head>
 
 <body>
