--- a/semana-6/introdução-java/atv-bruno-js/index.html
+++ b/semana-6/introdução-java/atv-bruno-js/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="./script.js"></script>
-    <title>Document</title>
+    <title>Atividade com o bruno</title>
 </head>
 
 <body>
