--- a/semana-3/Prática-07-Arrays 1/index.html
+++ b/semana-3/Prática-07-Arrays 1/index.html
@@ -54,13 +54,13 @@ f. Exiba o array resultante na tela
     frutas.push('Beringela')
 
 
-    frutas.pop('Bergamota')
+    frutas.pop()
 
 
     frutas.unshift('Pepino')
 
 
-    frutas.shift('Laranja')
+    frutas.shift()
 
     console.log(`Unshift: ${frutas}`)
 
