--- a/semana-4/Objetos e arrays/index.html
+++ b/semana-4/Objetos e arrays/index.html
@@ -1,7 +1,63 @@
+1. Crie um objeto em JavaScript para colocar dois atributos de um
+produto. Atribua o preço e descrição do produto com o valor “90” e a
+descrição com o valor “Mouse”. Mostre no console o valor dos dois
+atributos.
+
 <script>
 
 
+</script>
 
+2. Crie um objeto em JavaScript para colocar 5 atributos de um
+notebook. Atribua os seguintes atributos:
+Processador = i7
+Memória = 16GB
+Preço = 5000
+HD = 1TB
+SSD = 256GB
+Por fim, mostre o nome e valor de cada atributo no console,
+exatamente como está na atividade.
+
+<script>
+
+
+</script>
+
+3. Crie um objeto para colocar nome e duas notas. Atribua nome e
+duas notas para o primeiro objeto, que será nosso primeiro aluno.
+Agora crie mais um objeto para colocar informações do nosso
+segundo aluno. Mostre as informações de cada aluno no console.
+Mostre também a média do primeiro aluno e a média do segundo
+aluno. Por fim mostre a média desta turma de 2 alunos.
+
+<script>
+
+
+</script>
+
+4. Crie um cadastro de pessoas onde o usuário informe o nome, idade
+e se está trabalhando ou não, se a pessoa estiver trabalhando
+
+pergunte para ele o salário que está ganhando. Para cada pessoa
+cadastrada, pergunte ao usuário se ele deseja continuar
+cadastrando ou não. No final, mostre as pessoas que estão
+desempregadas, as pessoas que estão empregadas separadas
+pelas que ganham mais que 2500 e menos que 2500.
+
+Exemplo de resultado:
+Pessoas desempregadas:
+Nome: Alessandro, Idade: 28
+Nome: Alessandro, Idade: 28
+
+Pessoas empregadas com salários menores que 2500:
+Nome: Alessandro, Idade: 28, Salário: 1500
+Nome: Alessandro, Idade: 28, Salário: 2400
+
+Pessoas empregadas com salários maiores que 2500:
+Nome: Alessandro, Idade: 28, Salário: 2700
+Nome: Alessandro, Idade: 28, Salário: 3000
+
+<script>
 
 
 </script>
