--- a/semana-3/Pratica-8/index1.html
+++ b/semana-3/Pratica-8/index1.html
@@ -3,34 +3,47 @@
     // 1. Desenvolva um algoritmo para percorrer um vetor de 15 elementos
     // inteiros já preenchido e imprima todos os valores pares.
 
-    let elements = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15]
+    // let elements = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15]
 
-    for (const elemento of elements) {
-        if (elemento % 2 === 0) {
-            console.log(elemento + ' ')
-        }
-    }
+    // for (const elemento of elements) {
+    //     if (elemento % 2 === 0) {
+    //         console.log(elemento + ' ')
+    //     }
+    // }
 
-    // 2. Desenvolva um algoritmo para percorrer um vetor de 20 elementos
-    // inteiros e no final mostre a soma de todos os elementos.
+    // // 2. Desenvolva um algoritmo para percorrer um vetor de 20 elementos
+    // // inteiros e no final mostre a soma de todos os elementos.
 
-    let elementos2 = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20]
-    let soma = 0
+    // let elementos2 = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20]
+    // let soma = 0
 
-    for (let element of elementos2) {
-        soma += element
-    }
-    console.log(`a Soma dos elementos ${elements} é ${soma}`);
+    // for (let element of elementos2) {
+    //     soma += element
+    // }
+    // console.log(`a Soma dos elementos ${elements} é ${soma}`);
 
 
     // 3. Desenvolva um algoritmo que preenche um vetor com os 4
-    // primeiros números perfeitos.
+    // primeiros números perfeitos. 
+
+    // correçao feita
 
     let perfeito = []
 
-    for (let numero = 1; perfeito < 4; numero++) {
+    for (let num = 1; perfeito.length < 4; num++) {
         let somas = 0
+        for (let i = 1; i < num; i++) {
+            if (num % i === 0) {
+                somas += i
+            } else {
+                continue
+            }
+        }
     }
+    if (somas == num) {
+        perfeito.push(somas)
+    }
+    console.log(perfeito);
 
 
 
@@ -38,37 +51,37 @@
     // solicite um número para o usuário e no final informe se o número
     // que o usuário digitou está dentro da lista ou não.
 
-    let numeros = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
-    let numeroPedido = Number(prompt('digite um numero'))
-    let encontrado = false
+    // let numeros = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
+    // let numeroPedido = Number(prompt('digite um numero'))
+    // let encontrado = false
 
-    for (let numero9 of numeros) {
-        if (numero9 === numeroPedido) {
-            encontrado = true
-            break
-        }
-    }
-    if (!encontrado) {
-        console.log('o numero não esta na lista');
-    } else {
-        console.log('o numero esta na lista');
-    }
+    // for (let numero9 of numeros) {
+    //     if (numero9 === numeroPedido) {
+    //         encontrado = true
+    //         break
+    //     }
+    // }
+    // if (!encontrado) {
+    //     console.log('o numero não esta na lista');
+    // } else {
+    //     console.log('o numero esta na lista');
+    // }
 
 
-    // 5. Escreva um algoritmo que solicite ao usuário a entrada de 5 nomes,
-    // e que exiba a lista desses nomes na tela. Após exibir essa lista, o
-    // programa deve mostrar também os nomes na ordem inversa em
-    // que o usuário os digitou.
+    // // 5. Escreva um algoritmo que solicite ao usuário a entrada de 5 nomes,
+    // // e que exiba a lista desses nomes na tela. Após exibir essa lista, o
+    // // programa deve mostrar também os nomes na ordem inversa em
+    // // que o usuário os digitou.
 
-    //Utilizando o '.reverse()" PARA SIMPLIFICAR
+    // //Utilizando o '.reverse()" PARA SIMPLIFICAR
 
-    let nomes = []
+    // let nomes = []
 
-    while (nomes.length < 5) {
-        nomes.push(prompt("DIgite 5 nomes"))
-    }
-    console.log(nomes);
-    console.log(nomes.reverse());
+    // while (nomes.length < 5) {
+    //     nomes.push(prompt("DIgite 5 nomes"))
+    // }
+    // console.log(nomes);
+    // console.log(nomes.reverse());
 
 
     // Ex:
