--- a/semana-5/CRUD de carros/index.html
+++ b/semana-5/CRUD de carros/index.html
@@ -9,86 +9,7 @@
 
 <body>
     <script>
-        const todosCarros = [{
-            id: '61',
-            modelo: 'Truck',
-            marca: 'Ford',
-            ano: 2021,
-            cor: 'White',
-            preco: 35000
-        },
-        {
-            id: '78',
-            modelo: 'SUV',
-            marca: 'Toyota',
-            ano: 2022,
-            cor: 'White',
-            preco: 20000
-        },
-        {
-            id: '2',
-            modelo: 'Truck',
-            marca: 'Honda',
-            ano: 2022,
-            cor: 'Blue',
-            preco: 35000
-        },
-        {
-            id: '17',
-            modelo: 'Hatchback',
-            marca: 'Toyota',
-            ano: 2022,
-            cor: 'Black',
-            preco: 30000
-        },
-        {
-            id: '27',
-            modelo: 'Truck',
-            marca: 'Ford',
-            ano: 2021,
-            cor: 'Red',
-            preco: 35000
-        },
-        {
-            id: '12',
-            modelo: 'Truck',
-            marca: 'Chevrolet',
-            ano: 2021,
-            cor: 'Black',
-            preco: 30000
-        },
-        {
-            id: '76',
-            modelo: 'Hatchback',
-            marca: 'Chevrolet',
-            ano: 2021,
-            cor: 'Blue',
-            preco: 25000
-        },
-        {
-            id: '58',
-            modelo: 'SUV',
-            marca: 'Ford',
-            ano: 2020,
-            cor: 'Red',
-            preco: 30000
-        },
-        {
-            id: '78',
-            modelo: 'Truck',
-            marca: 'Toyota',
-            ano: 2020,
-            cor: 'White',
-            preco: 20000
-        },
-        {
-            id: '41',
-            modelo: 'Hatchback',
-            marca: 'Ford',
-            ano: 2022,
-            cor: 'Black',
-            preco: 25000
-        },]
+        const todosCarros = []
 
 
         //1
